@@ -28,6 +28,7 @@ uwm_SOURCES=  \
     pix.c \
     selection.c \
     wingroups.c \
+    tree.c \
     uwm.c
 
 noinst_HEADERS= \
@@ -53,6 +54,7 @@ noinst_HEADERS= \
 	pix.h \
 	selection.h \
 	wingroups.h \
+	tree.h \
 	workspaces.h
 
 EXTRA_DIST= shape.bitmap
